err/pyopy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyopy'...
Compiling './lib/python3.5/site-packages/pyopy/backend_mathworks.py'...
***   File "./lib/python3.5/site-packages/pyopy/backend_mathworks.py", line 134
    print x.shape
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyopy/backend_matlab_wrapper.py'...
***   File "./lib/python3.5/site-packages/pyopy/backend_matlab_wrapper.py", line 44
    except RuntimeError, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyopy/base.py'...
***   File "./lib/python3.5/site-packages/pyopy/base.py", line 484
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyopy/externals'...
Listing './lib/python3.5/site-packages/pyopy/externals/ompc'...
Compiling './lib/python3.5/site-packages/pyopy/externals/ompc/lex.py'...
***   File "./lib/python3.5/site-packages/pyopy/externals/ompc/lex.py", line 187
    exec "import %s as lextab" % tabfile
                             ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/pyopy/externals/ompc/ompcply.py'...
***   File "./lib/python3.5/site-packages/pyopy/externals/ompc/ompcply.py", line 960
    print usage
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyopy/externals/ompc/yacc.py'...
***   File "./lib/python3.5/site-packages/pyopy/externals/ompc/yacc.py", line 174
    raise YaccError, "Can't directly instantiate Parser. Use yacc() instead."
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyopy/hctsa'...
Compiling './lib/python3.5/site-packages/pyopy/hctsa/hctsa.py'...
***   File "./lib/python3.5/site-packages/pyopy/hctsa/hctsa.py", line 17
    print 'Starting engine'
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyopy/hctsa/hctsa_benchmark.py'...
***   File "./lib/python3.5/site-packages/pyopy/hctsa/hctsa_benchmark.py", line 107
    print opname
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyopy/hctsa/hctsa_bindings_gen.py'...
***   File "./lib/python3.5/site-packages/pyopy/hctsa/hctsa_bindings_gen.py", line 298
    exec '\n'.join(binding_imports) in globals()  # We are using nasty execs around that need these imports
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyopy/hctsa/hctsa_catalog.py'...
***   File "./lib/python3.5/site-packages/pyopy/hctsa/hctsa_catalog.py", line 283
    print 'ERROR: Cannot find the HCTSA mops file "%s".\n' \
                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyopy/hctsa/hctsa_install.py'...
***   File "./lib/python3.5/site-packages/pyopy/hctsa/hctsa_install.py", line 22
    print 'Removing current installation...'
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyopy/hctsa/tests'...
Listing './lib/python3.5/site-packages/pyopy/minioct2py'...
Listing './lib/python3.5/site-packages/pyopy/tests'...
Listing './lib/python3.5/site-packages/pyopy-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
